# elliptics_index_perf_docker

./: Dockerfile  README.md  ioserv.json  sshd_config  supervisord.conf
develop/index_perf/: CMakeLists.txt
elliptics/tests/: CMakeLists.txt
